# myDiscord

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  client.c  pseudo-code-client.txt  pseudo-code-serveur.txt  server.c
.github/workflows/: cmake-single-platform.yml  launch.json  tasks.json
conception/: parcours.md
database/: sql_queries_alter-table.sql  sql_queries_create.sql  sql_queries_select.sql
src/: main.c
src/UI/: custom.css  login_window.c  login_window.h  theme.c  theme.h  window.c  window.h
src/client/: client_main.c  client_socket.c  client_socket.h
src/config/: config.c  config.h
src/database/: channel_crud.c  channel_crud.h  channel_user_crud.c  channel_user_crud.h  client_crud.c  client_crud.h  db_connection.c  db_connection.h  message_crud.c  message_crud.h  private_message_crud.c  private_message_crud.h  reaction_crud.c  reaction_crud.h
src/server/: server_main.c  server_socket.c  server_socket.h
